<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="xyz.eneroth.memo.MainActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText_namn"
        android:layout_alignBaseline="@+id/textView_namn"
        android:layout_alignBottom="@+id/textView_namn"
        android:layout_toRightOf="@+id/textView_memo"
        android:layout_toEndOf="@+id/textView_memo" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/editText_memolist"
        android:layout_marginTop="53dp"
        android:layout_below="@+id/editText_namn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_text_getall_memos"
        android:id="@+id/button_1"
        android:layout_marginTop="63dp"
        android:layout_below="@+id/editText_memolist"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prompt_name"
        android:id="@+id/textView_namn"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_text_add_memo"
        android:id="@+id/button_2"
        android:layout_alignBottom="@+id/button_1"
        android:layout_toRightOf="@+id/button_1"
        android:layout_toEndOf="@+id/button_1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_text_delete_memo"
        android:id="@+id/button_3"
        android:layout_below="@+id/button_1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/prompt_memo"
       android:id="@+id/textView_memo"
       android:layout_below="@+id/editText_namn"
       android:layout_alignParentLeft="true"
       android:layout_alignParentStart="true" />

   <EditText
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:id="@+id/editText_memo"
       android:layout_below="@+id/textView_namn"
       android:layout_alignLeft="@+id/editText_namn"
       android:layout_alignStart="@+id/editText_namn" />

</RelativeLayout>
